--- a/web/src/main/resources/static/css/common.css
+++ b/web/src/main/resources/static/css/common.css
@@ -15,6 +15,17 @@
     color: #003057 !important;
 }
 
+.center-form {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+}
+.center-student-details-form {
+    margin: auto;
+    width: 90%;
+    padding: 10px;
+}
+
 .center {
     display: flex;
     justify-content: center;
