--- a/web/src/main/resources/templates/partner/edit-position.html
+++ b/web/src/main/resources/templates/partner/edit-position.html
@@ -19,14 +19,15 @@
                         <li class="breadcrumb-item active" aria-current="page">Edit Position</li>
                     </ol>
                 </nav>
-
-                <h1 class="text-center m-3" th:text="'Edit ' + ${type} + ': ' + ${id}">Title</h1>
+                <div class="form-border center-form mb-3">
+                <h1 class="text-center m-3 text-style" th:text="'Edit ' + ${type} + ': ' + ${id}">Title</h1>
 
                 <!-- Edit position forms -->
                 <div id="edit-position-forms" th:switch="${#strings.toLowerCase(type)}">
                     <div th:case="job" th:insert="fragments/position-forms  :: partner-edit-job-form"></div>
                     <div th:case="placement" th:insert="fragments/position-forms  :: partner-edit-placement-form"></div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
