--- a/web/src/main/resources/templates/student/marketplace.html
+++ b/web/src/main/resources/templates/student/marketplace.html
@@ -16,13 +16,13 @@
 
                 <!-- breadcrumb -->
                 <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
+                    <ol class="breadcrumb mt-2">
                         <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Marketplace</li>
                     </ol>
                 </nav>
-
-                <h1 class="text-center m-3">Jobs & Placements</h1>
+                
+                <h1 class="text-center m-3 text-style">Jobs & Placements</h1>
 
                 <!-- Switch fragment depending on the position type -->
                 <div id="fragment-container" th:switch="${#strings.toLowerCase(type)}">
