--- a/web/src/main/resources/static/css/common.css
+++ b/web/src/main/resources/static/css/common.css
@@ -20,6 +20,13 @@
     width: 50%;
     padding: 10px;
 }
+
+.center-forum {
+    margin: auto;
+    width: 80%;
+    padding: 10px;
+}
+
 .center-student-details-form {
     margin: auto;
     width: 90%;
@@ -79,4 +86,22 @@ textarea:invalid {
     border-color: #003057 !important;
     border-style: solid;
     border-width: 2px;
+}
+
+.accordion-button{
+    background-color: #003057 !important;
+    color: white !important;
+}
+
+.accordion-border {
+    border-color: #003057 !important;
+    border-style: solid;
+    border-width: 2px;
+}
+.accordion-button::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
 }
