--- a/web/src/main/resources/templates/partner/forum/overview.html
+++ b/web/src/main/resources/templates/partner/forum/overview.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
       <!-- breadcrumb -->
       <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
+        <ol class="breadcrumb mt-2">
           <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Forum</li>
         </ol>
