--- a/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
+++ b/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
@@ -1,5 +1,5 @@
 
-<!-- [ ] Expressions of Interest that are still open to be filled by a Partner -->
+<!-- [x] Expressions of Interest that are still open to be filled by a Partner -->
 <div th:fragment="pending-expressions-of-interest" id="pending-expressions-of-interest" xmlns:th="http://www.thymeleaf.org">
     
     <div class="row">
@@ -55,123 +55,7 @@
 
 </div>
 
-<!-- [ ] Current Pending Requests to Supply from Partners (Educator) -->
-<div th:fragment="pending-requests-to-supply" id="pending-requests-to-supply" xmlns:th="http://www.thymeleaf.org">
-
-    <div class="row">
-        <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">Pending</h1>
-        </div>
-        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
-            <input class="form-control" id="pendingRTSFilter" type="text" name="keyword" placeholder="Filter Pending Requests to Supply..." /></div>
-        <div class="col-md-1 col-xl-3"></div>
-    </div>
-
-    <div class="row table-container">
-        <table class="table table-primary table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Provider</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Description</th>
-                    <th class="text-center">Manage</th>
-                </tr>
-            </thead>
-            <tbody id="pendingRequestsToSupplyData">
-                <tr th:each="pendingRTS : ${pendingRequestsToSupply}">
-                    <th scope="row" th:text="${pendingRTS.id}"></th>
-                    <td th:text="${pendingRTS.partner.businessName}">Microsoft</td>
-                    <td th:text="${#dates.format(pendingRTS.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
-                    <td th:text="${#dates.format(pendingRTS.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
-                    <td th:text="${pendingRTS.description}">Just a one month job</td>
-                    <td style="display: flex;">
-                        <div class="mx-auto">
-                            <span class="material-symbols-rounded btn-approve">done</span>
-                            <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
-                            <span class="material-symbols-rounded btn-delete">delete</span>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <script th:inline="javascript">
-            /*<![CDATA[*/
-            var pendingRequestsToSupply =
-                /*[[${pendingRequestsToSupply}]]*/
-                /*]]>*/
-                $("#pendingRTSFilter").on("keyup", function () {
-                    var value = $(this).val();
-                    var table = document.getElementById("pendingRequestsToSupplyData");
-                    var filteredData = educatorFilterPositions(value, positions);
-                    rebuildEducatorPositionsTable(filteredData, table);
-                });
-        </script>
-    </div>
-    <hr/>
-</div>
-
-<!-- [ ] Accepted Requests to Supply from Partners (Educator) -->
-<div th:fragment="accepted-requests-to-supply" id="accepted-requests-to-supply" xmlns:th="http://www.thymeleaf.org">
-
-    <div class="row">
-        <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">Accepted</h1>
-        </div>
-        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
-            <input class="form-control" id="acceptedRTSFilter" type="text" name="keyword" placeholder="Filter Accepted Requests to Supply..." /></div>
-        <div class="col-md-1 col-xl-3"></div>
-    </div>
-
-    <div class="row table-container">
-        <table class="table table-primary table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Provider</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Description</th>
-                    <th class="text-center">Manage</th>
-                </tr>
-            </thead>
-            <tbody id="acceptedRequestsToSupplyData">
-                <tr th:each="acceptedRTS : ${acceptedRequestsToSupply}">
-                    <th scope="row" th:text="${acceptedRTS.id}"></th>
-                    <td th:text="${acceptedRTS.partner.businessName}">Microsoft</td>
-                    <td th:text="${#dates.format(acceptedRTS.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
-                    <td th:text="${#dates.format(acceptedRTS.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
-                    <td th:text="${acceptedRTS.description}">Just a one month job</td>
-                    <td style="display: flex;">
-                        <div class="mx-auto">
-                            <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
-                            <span class="material-symbols-rounded btn-delete">delete</span>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <script th:inline="javascript">
-            /*<![CDATA[*/
-            var acceptedRequestsToSupply =
-                /*[[${acceptedRequestsToSupply}]]*/
-                /*]]>*/
-                $("#acceptedRTSFilter").on("keyup", function () {
-                    var value = $(this).val();
-                    var table = document.getElementById("acceptedRequestsToSupplyData");
-                    var filteredData = educatorFilterPositions(value, positions);
-                    rebuildEducatorPositionsTable(filteredData, table);
-                });
-        </script>
-    </div>
-    <hr/>
-</div>
-
 <!-- [x] Partner can view and apply for Expressions of Interest that are still open. -->
-<!-- Todo: Apply for EIO functionality -->
 <div th:fragment="partner-pending-expressions-of-interest" id="partner-pending-expressions-of-interest" xmlns:th="http://www.thymeleaf.org">
     
     <div class="row">
@@ -254,168 +138,4 @@
     </div>
     <hr/>
 
-</div>
-
-<!-- [x] Partner Pending Requests to Supply -->
-<!-- Todo: Create, Edit, and delete requests to supply -->
-<div th:fragment="partner-pending-requests-to-supply" id="partner-pending-request-to-supply" xmlns:th="http://www.thymeleaf.org">
-
-    <div class="row">
-        <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">Pending</h1>
-        </div>
-        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
-            <input class="form-control" id="partnerOpenRSTFilter" type="text" name="keyword" placeholder="Filter Pending Requests to Supply..." /></div>
-        <div class="col-12 col-md-4 col-lg-4 col-xl-3"><button class="form-button center">+ New Request to Supply</button></div>
-    </div>
-
-    <div class="row table-container">
-        <table class="table table-primary table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Provider</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Description</th>
-                    <th class="text-center">Manage</th>
-                </tr>
-            </thead>
-            <tbody id="partnerOpenRequestsToSupplyData">
-                <tr th:each="openRTS : ${openRequestsToSupply}">
-                    <th scope="row" th:text="${openRTS.id}"></th>
-                    <td th:text="${openRTS.partner.businessName}">Microsoft</td>
-                    <td th:text="${#dates.format(openRTS.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
-                    <td th:text="${#dates.format(openRTS.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
-                    <td th:text="${openRTS.description}">Just a one month job</td>
-                    <td style="display: flex;">
-                        <div class="mx-auto">
-                            <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
-                            <span class="material-symbols-rounded btn-delete">delete</span>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
-        <script th:inline="javascript">
-            /*<![CDATA[*/
-                var openRequestsToSupplyList =
-                    /*[[${openRequestsToSupply}]]*/
-                    /*]]>*/
-                    $("#partnerOpenRSTFilter").on("keyup", function () {
-
-                        var value = $(this).val();
-
-                        let filteredData = [];
-                        for (let i = 0; i < openRequestsToSupplyList.length; i++) {
-                            value = value.toLowerCase();
-                            let id = openRequestsToSupplyList[i].id;
-                            let partner = openRequestsToSupplyList[i].partner.businessName.toLowerCase();
-                            let startDate = formatDate(openRequestsToSupplyList[i].startDate);
-                            let endDate = formatDate(openRequestsToSupplyList[i].endDate);
-                            let description = openRequestsToSupplyList[i].description.toLowerCase();
-
-                            if (id == value || partner.includes(value) || startDate.includes(value) || endDate.includes(value) || description.includes(value)) {
-                                filteredData.push(openRequestsToSupplyList[i]);
-                            }
-                        }
-
-                        var table = document.getElementById("partnerOpenRequestsToSupplyData");
-                        table.innerHTML = ``;
-                        for (let i = 0; i < filteredData.length; i++) {
-                            let row = `<tr>
-                                <th scope="row">${filteredData[i].id}</th>
-                                <td>${filteredData[i].partner.businessName}</td>
-                                <td>${formatDate(filteredData[i].startDate)}</td>
-                                <td>${formatDate(filteredData[i].endDate)}</td>
-                                <td>${filteredData[i].description}</td>
-                                <td style="display: flex;">
-                                    <div class="mx-auto">
-                                        ${`<a class="material-symbols-rounded btn-edit" href="/partner/edit-request-to-supply?id=${filteredData[i].id}" title="Edit"><span class="material-symbols-rounded btn-edit" > edit</span></a>`}
-                                        <span class="material-symbols-rounded btn-delete" > delete</span>
-                                    </div>
-                                </td>
-                                </tr>`;
-                            table.innerHTML += row;
-                        }
-                    });
-        </script>
-    </div>
-    <hr/>
-</div>
-
-<!-- [x] Partner Accepted Requests to Supply History -->
-<div th:fragment="partner-requests-to-supply-history" id="partner-requests-to-supply-history" xmlns:th="http://www.thymeleaf.org">
-
-    <div class="row">
-        <div class="col-12 col-md-4 col-lg-4 col-xl-3">
-            <h1 class="table-heading">History</h1>
-        </div>
-        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
-            <input class="form-control" id="rtsHistoryFilter" type="text" name="keyword" placeholder="Filter Requests to Supply History..." /></div>
-    </div>
-
-    <div class="row table-container">
-        <table class="table table-primary table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Provider</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Description</th>
-                </tr>
-            </thead>
-            <tbody id="partnerRTSHistoryData">
-                <tr th:each="rtsHistory : ${requestsToSupplyHistory}">
-                    <th scope="row" th:text="${rtsHistory.id}"></th>
-                    <td th:text="${rtsHistory.partner.businessName}">Microsoft</td>
-                    <td th:text="${#dates.format(rtsHistory.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
-                    <td th:text="${#dates.format(rtsHistory.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
-                    <td th:text="${rtsHistory.description}">Just a one month job</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <script th:inline="javascript">
-            /*<![CDATA[*/
-            var requestsToSupplyHistoryList =
-                /*[[${requestsToSupplyHistory}]]*/
-                /*]]>*/
-                $("#rtsHistoryFilter").on("keyup", function () {
-
-                    var value = $(this).val();
-
-                    let filteredData = [];
-                    for (let i = 0; i < requestsToSupplyHistoryList.length; i++) {
-                        value = value.toLowerCase();
-                        let id = requestsToSupplyHistoryList[i].id;
-                        let partner = requestsToSupplyHistoryList[i].partner.businessName.toLowerCase();
-                        let startDate = formatDate(requestsToSupplyHistoryList[i].startDate);
-                        let endDate = formatDate(requestsToSupplyHistoryList[i].endDate);
-                        let description = requestsToSupplyHistoryList[i].description.toLowerCase();
-                        let status = requestsToSupplyHistoryList[i].approved ? 'Approved' : 'Pending';
-
-                        if (id == value || partner.includes(value) || startDate.includes(value) || endDate.includes(value) || description.includes(value) || status.toLowerCase().includes(value)) {
-                            filteredData.push(requestsToSupplyHistoryList[i]);
-                        }
-                    }
-
-                    var table = document.getElementById("partnerRTSHistoryData");
-                    table.innerHTML = ``;
-                    for (let i = 0; i < filteredData.length; i++) {
-                        let row = `<tr>
-                                <th scope="row">${filteredData[i].id}</th>
-                                <td>${filteredData[i].partner.businessName}</td>
-                                <td>${formatDate(filteredData[i].startDate)}</td>
-                                <td>${formatDate(filteredData[i].endDate)}</td>
-                                <td>${filteredData[i].description}</td>
-                                </tr>`;
-                        table.innerHTML += row;
-                    }
-                });
-        </script>
-    </div>
-    <hr/>
 </div>
