Forum UI for all users

--- a/web/src/main/resources/templates/educator/forum/forum-thread.html
+++ b/web/src/main/resources/templates/educator/forum/forum-thread.html
@@ -20,7 +20,7 @@
     <div class="container-fluid">
       <!-- breadcrumb -->
       <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
+        <ol class="breadcrumb mt-2">
           <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
           <li class="breadcrumb-item"><a th:href="@{forum}">Forum</a></li>
           <li class="breadcrumb-item active" aria-current="page" th:text="${categoryName}"></li>
