--- a/web/src/main/resources/templates/partner/marketplace.html
+++ b/web/src/main/resources/templates/partner/marketplace.html
@@ -15,7 +15,7 @@
       <!-- breadcrumb -->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb mt-2">
-          <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
+          <li class="breadcrumb-item"><a th:href="@{/}" style="text-decoration: underline;">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Marketplace</li>
         </ol>
       </nav>
