--- a/web/src/main/resources/templates/partner/forum/forum-thread.html
+++ b/web/src/main/resources/templates/partner/forum/forum-thread.html
@@ -20,10 +20,10 @@
     <div class="container-fluid">
       <!-- breadcrumb -->
       <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
+        <ol class="breadcrumb mt-2">
           <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
           <li class="breadcrumb-item"><a th:href="@{forum}">Forum</a></li>
-          <li class="breadcrumb-item active" aria-current="page" th:text="${categoryName}"></li>
+          <li class="breadcrumb-item active"  aria-current="page" th:text="${categoryName}"></li>
         </ol>
       </nav>
 
